ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress # Ingress คือ การเชื่อมต่อระหว่าง Client กับ Service ใน Kubernetes
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: "nginx" # ใช้ Nginx ในการจัดการ Ingress
#     nginx.ingress.kubernetes.io/use-regex: "true" # ใช้ Regular Expression ในการจัดการ Ingress
# spec:
#   rules:
#     - host: todo.com # ชื่อ Domain ที่จะใช้เชื่อมต่อกับ Service
#       http:
#         paths:
#           - path: /api/ # ใช้ Regular Expression ในการจัดการ Path ของ Service
#             pathType: Prefix # ใช้ Prefix ในการจัดการ Path ของ Service
#             backend:
#               service:
#                 name: server-service # ชื่อของ Service ที่จะเชื่อมต่อกับ Path นี้
#                 port:
#                   number: 80 # กำหนด port ที่จะเชื่อมต่อกับ Service

#           - path: /?(.*)/ # ใช้ Regular Expression ในการจัดการ Path ของ Service
#             pathType: Prefix # ใช้ Prefix ในการจัดการ Path ของ Service
#             backend:
#               service:
#                 name: client-service # ชื่อของ Service ที่จะเชื่อมต่อกับ Path นี้
#                 port:
#                   number: 80 # กำหนด port ที่จะเชื่อมต่อกับ Service
#
#
#
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: todo.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 80
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
